--- a/.github/workflows/youtube-ingest.yml
+++ b/.github/workflows/youtube-ingest.yml
@@ -20,7 +20,7 @@ jobs:
           
       - name: Install dependencies
         run: |
-          pip install google-api-python-client
+          pip install google-api-python-client pip install isodate
 
       - name: Sync YouTube data
         env:
