--- a/.github/workflows/youtube-ingest.yml
+++ b/.github/workflows/youtube-ingest.yml
@@ -2,10 +2,10 @@ name: Sync YouTube Data to Port
 
 on:
   schedule:
-    - cron: '0 */12 * * *'  # Runs every 12 hours 
-  workflow_dispatch:  # Allows manual triggers
+    - cron: '0 */12 * * *' 
+  workflow_dispatch:  
   push:
-    branches: [ main ]  # Also runs on main branch updates
+    branches: [ main ]  
 
 jobs:
   sync-youtube-data:
